<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:layout_weight="5.0"
    android:padding="4.0dp">
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_blank" />
      <TextView
        android:id="@+id/registration_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/all_blank" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_blank" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_your_name"
        android:labelFor="@id/name" />
      <EditText
        android:id="@+id/name"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="textCapWords|textPersonName"
        android:autofillHints="name" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_your_email"
        android:labelFor="@id/email" />
      <EditText
        android:id="@+id/email"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_blank" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_desired_username"
        android:labelFor="@id/username" />
      <EditText
        android:id="@+id/username"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="text"
        android:autofillHints="username" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_desired_password"
        android:labelFor="@id/password" />
      <EditText
        android:id="@+id/password"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        android:importantForAutofill="no" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_confirm_password"
        android:labelFor="@id/confirm_password" />
      <EditText
        android:id="@+id/confirm_password"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        android:importantForAutofill="no" />
    </LinearLayout>
  </ScrollView>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom">
    <View
      android:layout_width="0.0dp"
      android:layout_height="fill_parent"
      android:layout_weight="1" />
    <Button android:text="@string/account_register_button"
      android:id="@+id/register_button"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_width="0dp" />
  </LinearLayout>
</LinearLayout>
