<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:layout_weight="5.0"
    android:padding="4.0dp">
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_your_comments"
        android:labelFor="@id/comments" />
      <EditText
        android:id="@+id/comments"
        android:lines="8"
        android:minLines="8"
        android:gravity="top|left"
        android:maxLines="8"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:scrollbars="none"
        android:inputType="textCapSentences|textMultiLine"
        android:importantForAutofill="no" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_your_name"
        android:labelFor="@id/name" />
      <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"
        android:autofillHints="name" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_your_email"
        android:labelFor="@id/email" />
      <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />
    </LinearLayout>
  </ScrollView>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom">
    <View
      android:layout_width="0.0dp"
      android:layout_height="fill_parent"
      android:layout_weight="1" />
    <Button android:text="@string/all_upload"
      android:id="@+id/upload"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_width="0dp" />
  </LinearLayout>
</LinearLayout>
